--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-427.5KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇨🇦 加拿大-600.9KB/s(Youtube:不良林), server: 134.195.198.95, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-3.26MB/s(Youtube:不良林), server: 38.143.66.20, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇬🇧 英国-5.45MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-394.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65014, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-1014.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-458.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.41MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.51MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.11MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-2.69MB/s(Youtube:不良林), server: 85.208.108.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇳 中国-415.0KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
   - {name: 🇨🇳 中国-947.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.89MB/s(Youtube:不良林), server: 38.143.66.20, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-1.08MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.22MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇳🇱 荷兰-2.53MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-427.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-394.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1014.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-458.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-947.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.53MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-427.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-394.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1014.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-458.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-947.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.53MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-427.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-394.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1014.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-458.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-947.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.53MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-427.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-394.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1014.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-458.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-947.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.53MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-427.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-394.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1014.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-458.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-947.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.53MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-427.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-394.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1014.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-458.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-947.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.53MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-427.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-600.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.26MB/s(Youtube:不良林)
-      - 🇬🇧 英国-5.45MB/s(Youtube:不良林)
-      - 🇨🇳 中国-394.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1014.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-458.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-947.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.53MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
