--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-458.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.51MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.43MB/s(Youtube:不良林), server: 38.143.66.20, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇯🇵 日本-3.04MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇨🇳 中国-343.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-669.1KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇬🇧 英国-1.11MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-2.69MB/s(Youtube:不良林), server: 85.208.108.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇳 中国-415.0KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-947.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.89MB/s(Youtube:不良林), server: 38.143.66.20, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-1.08MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1.22MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇳🇱 荷兰-2.53MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-902.6KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-1.81MB/s(Youtube:不良林), server: youtube.bai-piao-wang-zhe.567568.ml, port: 443, type: trojan, password: e88cb308-73f7-4302-89bf-b65c7386b117, sni: youtube.bai-piao-wang-zhe.567568.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-469.9KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-365.7KB/s(Youtube:不良林), server: 36.134.156.5, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-458.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-669.1KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-947.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-902.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-458.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-669.1KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-947.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-902.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-458.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-669.1KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-947.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-902.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-458.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-669.1KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-947.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-902.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-458.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-669.1KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-947.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-902.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-458.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-669.1KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-947.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-902.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-458.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-669.1KB/s(Youtube:不良林)
       - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-415.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-947.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.08MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.22MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-2.53MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-902.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.81MB/s(Youtube:不良林)
+      - 🇨🇳 中国-469.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-365.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
