--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.43MB/s(Youtube:不良林), server: 38.143.66.20, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇯🇵 日本-3.04MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇳 中国-343.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-669.1KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-1.11MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇳🇱 荷兰-2.53MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-902.6KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-1.81MB/s(Youtube:不良林), server: youtube.bai-piao-wang-zhe.567568.ml, port: 443, type: trojan, password: e88cb308-73f7-4302-89bf-b65c7386b117, sni: youtube.bai-piao-wang-zhe.567568.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-469.9KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇳 中国-365.7KB/s(Youtube:不良林), server: 36.134.156.5, port: 65040, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇺🇸 美国-626.1KB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇳 中国-430.7KB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 38.143.66.20, port: 5000, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-1.03MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.16MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇩🇪 德国-2.54MB/s(Youtube:不良林), server: 193.108.118.30, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 未知国家-422.2KB/s(Youtube:不良林), server: 207.2.120.172, port: 443, type: trojan, password: 34c2ebbd-8ecf-3c1c-a945-19cd394a3e43, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-650.6KB/s(Youtube:不良林), server: 43.134.229.238, port: 57557, type: vmess, uuid: 7d869c3d-9223-4470-a51c-5c50d41b15cd, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-970.2KB/s(Youtube:不良林), server: 43.134.229.238, port: 46043, type: vmess, uuid: b5770696-55be-4d23-a28e-8a1ab771dd7d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-576.6KB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-669.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-902.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-469.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-626.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-430.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.54MB/s(Youtube:不良林)
+      - 未知国家-422.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-650.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-970.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-576.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-669.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-902.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-469.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-626.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-430.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.54MB/s(Youtube:不良林)
+      - 未知国家-422.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-650.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-970.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-576.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-669.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-902.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-469.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-626.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-430.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.54MB/s(Youtube:不良林)
+      - 未知国家-422.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-650.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-970.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-576.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-669.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-902.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-469.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-626.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-430.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.54MB/s(Youtube:不良林)
+      - 未知国家-422.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-650.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-970.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-576.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-669.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-902.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-469.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-626.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-430.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.54MB/s(Youtube:不良林)
+      - 未知国家-422.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-650.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-970.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-576.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-669.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-902.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-469.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-626.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-430.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.54MB/s(Youtube:不良林)
+      - 未知国家-422.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-650.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-970.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-576.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-343.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-669.1KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-2.53MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-902.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-469.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-365.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-626.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-430.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.16MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.54MB/s(Youtube:不良林)
+      - 未知国家-422.2KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-650.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-970.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-576.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
