--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-189.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.83MB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-432.2KB/s(Youtube:不良林), server: 38.143.66.20, port: 8000, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇳 中国-2.51MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.55MB/s(Youtube:不良林), server: 85.208.108.19, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇳 中国-2.00MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.21MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-226.1KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-459.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.53MB/s(Youtube:不良林), server: 38.143.66.20, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇨🇳 中国-502.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-242.1KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇨🇳 中国-1.52MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-189.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-432.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-459.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-502.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-242.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-189.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-432.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-459.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-502.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-242.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-189.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-432.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-459.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-502.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-242.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-189.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-432.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-459.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-502.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-242.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-189.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-432.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-459.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-502.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-242.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-189.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-432.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-459.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-502.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-242.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-189.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-432.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.51MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.00MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.21MB/s(Youtube:不良林)
+      - 🇨🇳 中国-226.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-459.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.53MB/s(Youtube:不良林)
       - 🇨🇳 中国-502.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-242.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.52MB/s(Youtube:不良林)
